[package]
authors = ["Rick van der Wal <rick@tweedegolf.com>"]
name = "device"
edition = "2018"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
stm32wlxx-hal = { git = "https://github.com/Tortoaster/stm32wlxx-hal.git", branch = "radio", features = ["stm32wle5", "rt", "defmt"] }
lora-e5-bsp = { git = "https://github.com/Tortoaster/stm32wlxx-hal.git", branch = "radio" }
lorawan = { git = "https://github.com/tweedegolf/lorawan.git", features = ["defmt"] }
