[package]
name = "ttn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drogue-ttn = "0.5.0"
futures = "0.3"
paho-mqtt = "0.9"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.14.0", features = ["full"] }
